# statecraft

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GAME_DESIGN.md  README.md  RESEARCH.md  ROADMAP.md  SKILL.md  X_THREAD_TEMPLATE.md  auto_loop.sh  demo.mjs  migrate.mjs  package-lock.json  package.json  patch-annexation.mjs  turn2_state.json  turn3_state.json  turn_state.json
.claude/: settings.local.json
contracts/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
contracts/programs/statecraft-market/: Cargo.toml
contracts/programs/statecraft-market/src/: lib.rs
contracts/tests/: statecraft-market.ts
public/: skill.md
scripts/: build-map-paths.mjs  check-missing.mjs  find-codes.mjs  fix-nuts-codes.mjs  merge-map.mjs  remap-codes.mjs  sync-ui-data.mjs
src/: index.ts
src/data/: country-provinces.json  country-starters.json  province-adjacency.json  province-data.json
src/db/: client.ts  countries.ts  diplomacy.ts  events.ts  games.ts  players.ts  provinces.ts  queries.ts  trades.ts  turns.ts
src/demo/: war-demo.ts
src/game/: config.ts  engine.ts  logger.ts  resolver.ts  scheduler.ts
src/middleware/: admin.ts  auth.ts
src/routes/: admin.ts  auth.ts  game.ts  leaderboard.ts  map.ts  spectator.ts  turn.ts
src/types/: actions.ts  index.ts
src/ui/: server.ts
src/ws/: broadcaster.ts
supabase/migrations/: 001_initial.sql  002_add_annexed_by.sql  003_v3_rebuild.sql
ui/: package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: LobbyRoom.tsx  MusicPlayer.tsx  OnboardingModal.tsx  (+3 more)
(+30 files in other folders)
