[package]
name = "statecraft-market"
version = "0.1.0"
edition = "2021"
description = "Parimutuel betting pool for Statecraft AI-country games"

[lib]
crate-type = ["cdylib", "lib"]
name = "statecraft_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Required for init_if_needed constraint
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
